--- a/index.html
+++ b/index.html
@@ -10,27 +10,30 @@
 <body class="page">
 <header class="header page-header">
     <div class="container header_container">
-        <div class="logo header_logo">
-            <img class="logo__fish-body logo_logo__fish-body" src="img/header_main/fish_body.png" alt="">
-            <img class="logo__circle logo_logo__circle" src="img/header_main/circle.png" alt="">
-        </div>
+        <img class="logo" src="img/header/logo.png" width="85" height="81" alt="">
         <div class="caption header-caption">
-            <h2 class="caption__title caption_caption__title">Salmonbellies AS</h2>
-            <h2 class="caption__subtitle caption_caption__subtitle">Trout is the new salmon</h2>
+            <span class="caption__title caption_caption__title">Salmonbellies AS</span>
+            <p class="caption__subtitle caption_caption__subtitle">Trout is the new salmon</p>
         </div>
-        <nav class="nav header-nav">
-            <ul class="nav__ul nav_nav__ul">
-                <li class="nav__li nav__li_color nav__li_size">Our products</li>
-                <li>Receipes</li>
-                <li>Services</li>
-                <li>The promise</li>
-                <li>Origin</li>
-                <li>Markets</li>
-                <li>CSR</li>
-                <li>Company</li>
-                <li>Contacts</li>
+
+        <nav class="nav header__nav">
+            <ul class="ul nav__ul">
+                <li class="nav__li nav__li--color-red nav__li--size-20">Our products</li>
+                <li class="nav__li">Receipes</li>
+                <li class="nav__li">Services</li>
+                <li class="nav__li">The promise</li>
+                <li class="nav__li">Origin</li>
+                <li class="nav__li">Markets</li>
+                <li class="nav__li">CSR</li>
+                <li class="nav__li">Company</li>
+                <li class="nav__li">Contacts</li>
             </ul>
         </nav>
+
+        <img src="img/header/Group 4.png" width="32" height="32" alt="">
+        <button>
+            <img src="img/header/arrow.svg" alt="">
+        </button>
     </div>
 </header>
 
@@ -45,21 +48,109 @@
             </div>
         </div>
     </section>
-    <section class="assortiment">
-        <div class="assortiment__body">
-            <div class="assortiment__white_karta">
-                <div class="assortiment__tovar">
-                    <img class="assortiment__fish_img" src="img\section_assortiment\kirjolohi-kokonainen.png">
-                    <div class="assortiment__description">
-                        <h3>TROUT WHOLE ONCORHYNCHUS MYKISS</h3>
-                    </div>
-                </div>
+
+    <section class="assortment">
+        <div class="block">
+
+            <div class="box box1">
+                <img src="img/catalog/kirjolohi-kokonainen.jpg" width="246" height="154" alt="">
+                <p>TROUT WHOLE<br>
+                    ONCORHYNCHUS MYKISS</p>
+            </div>
+
+            <div class="box box2">
+                <img src="img/catalog/kirjolohifilee.jpg" width="241" height="151" alt="">
+                <p>TROUT FILLET<br>
+                    ONCORHYNCHUS MYKISS</p>
+            </div>
+
+            <div class="box box3">
+                <img src="img/catalog/lohi-kokonainen.jpg" width="248" height="155" alt="">
+                <p>SALMON WHOLE<br>
+                    SALMO SALAR</p>
+            </div>
+
+            <div class="box box4">
+                <img src="img/catalog/norjalainen-lohifilee.jpg" width="243" height="151" alt="">
+                <p>SALMON C-CUT FILLET<br>
+                    SALMO SALAR</p>
+            </div>
+
+
+            <div class="box box5">
+                <img src="img/catalog/siika-kasvatettu-villi.jpg" width="248" height="155" alt="">
+                <p> WHITEFISH<br>
+                    COREGONUS LAVARETUS</p>
+            </div>
+
+            <div class="box box6">
+                <img src="img/catalog/siikafilee-suomulla-suomustettu-ruodoton.jpg" width="239" height="150" alt="">
+                <p>WHITEFISH FILLET WITHOUT<br> SKIN AND SCALED</p>
+            </div>
+
+            <div class="box box7">
+                <img src="img/catalog/taimen.jpg" width="234" height="146" alt="">
+                <p>FARMED BROWN TROUT<br> SALMO TRUTTA</p>
+            </div>
+
+            <div class="box box8">
+                <img src="img/catalog/kalaneuvos-tuore-taimenfilee-syvatty-web.jpg" width="246" height="153" alt="">
+                <p>FARMED BROWN TROUT FILLET<br>
+                    SALMO TRUTTA</p>
+            </div>
+
+
+            <div class="box box9">
+                <img src="img/catalog/ahven 2.jpg" width="233" height="146" alt="">
+                <p>TROUT WHOLE<br>
+                    ONCORHYNCHUS MYKISS</p>
+            </div>
+
+            <div class="box box10">
+                <img src="img/catalog/kuhafilee-nahaton.jpg" width="231" height="144" alt="">
+                <p>TROUT FILLET<br>
+                    ONCORHYNCHUS MYKISS</p>
+            </div>
+
+            <div class="box box11">
+                <img src="img/catalog/kuha.jpg" width="234" height="146" alt="">
+                <p>SALMON WHOLE<br>
+                    SALMO SALAR</p>
+            </div>
+
+            <div class="box box12">
+                <img src="img/catalog/muikku-perattu.jpg" width="246" height="154" alt="">
+                <p>SALMON C-CUT FILLET<br>
+                    SALMO SALAR</p>
+            </div>
+
+
+            <div class="box box13">
+                <img src="img/catalog/silakkafilee.jpg" width="237" height="148" alt="">
+                <p>WHITEFISH<br>
+                    COREGONUS LAVARETUS</p>
+            </div>
+
+            <div class="box box14">
+                <img src="img/catalog/silakka.jpg" width="236" height="147" alt="">
+                <p>WHITEFISH FILLET WITHOUT<br>
+                    SKIN AND SCALED</p>
             </div>
         </div>
-
     </section>
-    <footer>
-
+    <footer class="footer">
+        <div class="footer-row">
+            <img src="img/footer/Group 3.png" width="85" height="53" alt="">
+            <div>
+                <span>Salmonbellies AS</span>
+                <p>Trout is the new salmon</p>
+            </div>
+            <div class="u"></div>
+            <div>Kosher per demand</div>
+            <div class="f"></div>
+            <div class="in"></div>
+            <p>Copyright SalmonBellies.no 2019, All Rights Reserved</p>
+        </div>
     </footer>
 </main>
 </body>
