fix: nav and div change to teg link a

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
                     <li class="nav__item"><a class="nav__link" href="#">Company</a></li>
                     <li class="nav__item"><a class="nav__link" href="#">Contacts</a></li>
                 </ul>
+                </ul>
             </nav>
             <div class="uk-box">
                 <div class="uk uk-box__uk"></div>
@@ -212,11 +213,11 @@
             <p class="logo-text__low">Trout is the new salmon</p>
         </div>
         <div class="kosher-box footer__kosher-box">
-            <div class="kosher"></div>
+            <a href="" class="kosher"></a>
             <p class="kosher-box__text">Kosher per demand</p>
         </div>
-        <div class="fb footer__fd"></div>
-        <div class="in footer__in"></div>
+        <a href="" class="fb footer__fd"></a>
+        <a href="" class="in footer__in"></a>
         <p class="text footer__text">Copyright SalmonBellies.no 2019, All Rights Reserved</p>
     </div>
 </footer>
