fix menu mobile

--- a/app/index.html
+++ b/app/index.html
@@ -30,10 +30,11 @@
                         products</a>
                     </li>
 
-
-                    <li id="idNavElement2" class="nav__item nav__item--element-2">
-                        <button class="nav__button-inner nav__button--inner-2"></button>
-                        <a class="nav__link" href="#">Receipes</a>
+                    <div id="idNavElement2">
+                        <li class="nav__item nav__item--element-2">
+                            <button class="nav__button-inner nav__button--inner-2"></button>
+                            <a class="nav__link" href="#">Receipes</a>
+                        </li>
 
                         <ul class="nav__element-2-inner win-none">
                             <ul class="nav__inner_2_1">
@@ -83,13 +84,15 @@
                                 </li>
                             </ul>
                         </ul>
-                    </li>
+                    </div>
 
                     <li class="nav__item"><a class="nav__link " href="#">Services</a></li>
-                    <li id="idPicContainer4" class="nav__item nav__item--element-4">
-                        <button class="nav__button-inner nav__button--inner-4"></button>
-                        <a class="nav__link" href="#">The promise</a>
 
+                    <div id="idPicContainer4">
+                        <li id="idPicContainer4Modile" class="nav__item nav__item--element-4">
+                            <button class="nav__button-inner nav__button--inner-4"></button>
+                            <a class="nav__link" href="#">The promise</a>
+                        </li>
                         <ul id="picHolder" class="nav__element-4-inner win-none">
                             <li>
                                 <a href="">Element 4.1</a>
@@ -98,7 +101,7 @@
                                 <a href="">Element 4.2</a>
                             </li>
                         </ul>
-                    </li>
+                    </div>
 
                     <li class="nav__item"><a class="nav__link" href="#">Origin</a></li>
                     <li class="nav__item"><a class="nav__link" href="#">Markets</a></li>
