--- a/app/index.html
+++ b/app/index.html
@@ -332,6 +332,7 @@
             </a>
         </section>
     </div>
+    <div class="move">move me</div>
 </main>
 <footer class="footer">
     <div class="container container--footer">
@@ -351,5 +352,7 @@
 </footer>
 <script src="js/app.min.js"></script>
 <script src="js/menu.js"></script>
+<script src="js/move.js"></script>
+
 </body>
 </html>
