made menu mobile

--- a/app/index.html
+++ b/app/index.html
@@ -32,11 +32,11 @@
 
                     <div id="idNavElement2">
                         <li class="nav__item nav__item--element-2">
-                            <button class="nav__button-inner nav__button--inner-2"></button>
+                            <button class="nav__button-inner nav__button--inner-2 nav--button-big"></button>
                             <a class="nav__link" href="#">Receipes</a>
                         </li>
 
-                        <ul class="nav__element-2-inner win-none">
+                        <ul class="nav__element-2-inner win-none ulbig">
                             <ul class="nav__inner_2_1">
                                 <li>
                                     <a>Element 2.1</a>
@@ -46,9 +46,10 @@
 
                             <ul class="nav__inner_2_2">
                                 <li>
-                                    <button class="nav__button-inner nav__button--inner-2-2"></button>
-                                    <a>Element 2.2</a></li>
-                                <ul class="nav__inner_2_2_ul_small win-none">
+                                    <button class="nav__button-inner nav__button--inner-2-2 nav__button-inner_small"></button>
+                                    <a class="element_2">Element 2.2</a>
+                                </li>
+                                <ul class="nav__inner_2_2_s win-none ulsmall">
                                     <li class="nav__inner-small"><a>Element 2.2.1</a></li>
                                     <li class="nav__inner-small"><a>Element 2.2.2</a></li>
                                     <li class="nav__inner-small"><a>Element 2.2.3</a></li>
@@ -63,16 +64,16 @@
                             </ul>
                             <ul class="nav__inner_2_4">
                                 <li>
-                                    <button class="nav__button-inner nav__button--inner-2-4"></button>
+                                    <button class="nav__button-inner nav__button--inner-2-4 nav__button-inner_small"></button>
                                     <a>Element 2.4</a></li>
-                                <ul class="nav__inner_2_4_ul_small">
-                                    <li class="nav__inner-small win-none"><a>Element 2.4.1</a></li>
-                                    <li class="nav__inner-small win-none"><a>Element 2.4.2</a></li>
-                                    <li class="nav__inner-small win-none"><a>Element 2.4.3</a></li>
-                                    <li class="nav__inner-small win-none"><a>Element 2.4.4</a></li>
-                                    <li class="nav__inner-small win-none"><a>Element 2.4.5</a></li>
-                                    <li class="nav__inner-small win-none"><a>Element 2.4.6</a></li>
-                                    <li class="nav__inner-small win-none"><a>Element 2.4.7</a></li>
+                                <ul class="nav__inner_2_4_s win-none ulsmall">
+                                    <li class="nav__inner-small"><a>Element 2.4.1</a></li>
+                                    <li class="nav__inner-small"><a>Element 2.4.2</a></li>
+                                    <li class="nav__inner-small"><a>Element 2.4.3</a></li>
+                                    <li class="nav__inner-small"><a>Element 2.4.4</a></li>
+                                    <li class="nav__inner-small"><a>Element 2.4.5</a></li>
+                                    <li class="nav__inner-small"><a>Element 2.4.6</a></li>
+                                    <li class="nav__inner-small"><a>Element 2.4.7</a></li>
                                 </ul>
                             </ul>
                             <ul class="nav__inner_2_5">
@@ -90,10 +91,10 @@
 
                     <div id="idPicContainer4">
                         <li id="idPicContainer4Modile" class="nav__item nav__item--element-4">
-                            <button class="nav__button-inner nav__button--inner-4"></button>
+                            <button class="nav__button-inner nav__button--inner-4 nav--button-big"></button>
                             <a class="nav__link" href="#">The promise</a>
                         </li>
-                        <ul id="picHolder" class="nav__element-4-inner win-none">
+                        <ul id="picHolder" class="nav__element-4-inner win-none ulbig">
                             <li>
                                 <a href="">Element 4.1</a>
                             </li>
@@ -351,8 +352,10 @@
     </div>
 </footer>
 <script src="js/app.min.js"></script>
-<script src="js/menu.js"></script>
+<!--<script src="js/menu.js"></script>-->
 <script src="js/move.js"></script>
+<script src="js/menu_mobile.js"></script>
+
 
 </body>
 </html>
