--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
                         products</a>
                     </li>
 
-                    <div id="idNavElement2">
+                    <div id="idNavElement2" class="nav-menu">
                         <li class="nav__item nav__item--element-2">
                             <button class="nav__button-inner nav__button--inner-2 nav--button-big"></button>
                             <a class="nav__link" href="#">Receipes</a>
@@ -89,7 +89,7 @@
 
                     <li class="nav__item"><a class="nav__link " href="#">Services</a></li>
 
-                    <div id="idPicContainer4">
+                    <div id="idPicContainer4" class="nav-menu">
                         <li id="idPicContainer4Modile" class="nav__item nav__item--element-4">
                             <button class="nav__button-inner nav__button--inner-4 nav--button-big"></button>
                             <a class="nav__link" href="#">The promise</a>
@@ -354,7 +354,10 @@
 <script src="js/app.min.js"></script>
 <!--<script src="js/menu.js"></script>-->
 <script src="js/move.js"></script>
+
 <script src="js/menu_mobile.js"></script>
+<script src="js/menu_pc.js"></script>
+
 
 
 </body>
