--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,7 @@
 <header class="header">
 
     <div class="container">
-        <!--Что вставлять контейнер для всех блоков или к header__wrapper прописать все свойства как в contaner
-        получится проект без глобального контейнера. Или можно задавить мадификаторы container для определенных
-        блоков-->
+        <!--в header__wrapper прописать все свойства contaner-->
         <div class="header__wrapper">
             <div class="logo-box">
                 <img class="logo logo-box__logo" src="images/dest/logo.svg" width="85" height="81" alt="logo">
@@ -125,13 +123,6 @@
             <h1>Our fresh and frozen fish</h1>
         </div>
     </div>
-    <!--<div class="test">-->
-    <!--<div class="text-in">asdfasdfasdf asdf asdf asdf asdf asd fasdf asdf asdf asdf asdf asdf asdf asdf asdfa-->
-    <!--sdfasdf asdf asdf asdf asdf asdafsd fasdf asdf asdf asdf asdf</div>-->
-    <!--<div class="text-in">qwerqwerqwer qwe rqwer qwer qwer qwer qwe rqwer qwer qwer qwer qwer qwer qwer qwer-->
-    <!--qwer qwe rqwerweq rqwer qwe qwerqwer qwer qwerqwer qwer qwerq werqwe rqwer qwer qwer qwerqwer qwer-->
-    <!--qwer qwer qwerqwer rqwe</div>-->
-    <!--</div>-->
 
     <div class="container">
         <section class="catalog container__catalog">
@@ -354,8 +345,7 @@
 <script src="js/app.min.js"></script>
 <!--<script src="js/menu.js"></script>-->
 <script src="js/move.js"></script>
-<!---->
-<!---->
+
 <script src="js/menu_mobile.js"></script>
 <script src="js/menu_pc.js"></script>
 
